--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quarkchain-system-contracts",
+  "name": "quarkchain-contracts",
   "version": "0.0.1",
   "description": "",
   "main": "truffle-config.js",
